# CMakeList.txt: 201312 的 CMake 项目，在此处包括源代码并定义
# 项目特定的逻辑。
#
cmake_minimum_required (VERSION 3.8)

# 将源代码添加到此项目的可执行文件。
add_executable (20131201 "1.cpp")
add_executable (20131202 "2.cpp")
add_executable (20131203 "3.cpp")
add_executable (20131204 "4.cpp")
add_executable (20131205 "5.cpp")

# TODO: 如有需要，请添加测试并安装目标。
